--- a/index.html
+++ b/index.html
@@ -72,13 +72,9 @@
                     <!-- Logo -->
                     <div class="social-media">
                         <div class="social-media-wrap">
-                            <a class="social-media-img" href="index.html">
-                                <img class="social-media-img" src="img/header/linkedln.svg" alt="Asentus Logo">
-                            </a>
-                            <a class="social-media-img" href="index.html">
-                                <img class="social-media-img" src="img/header/whatsapp.svg" alt="Asentus Logo">
-                            </a>
-                    </div>
+                            <img class="social-media-img" src="img/header/linkedln.svg" alt="Linkedin">
+                            <img class="social-media-img" src="img/header/whatsapp.svg" alt="Whatsapp">
+                        </div>
                     </div>
                     <!-- End Logo -->
                 </div>
@@ -153,97 +149,47 @@
         </div>
     </div>
     <!-- End Empresa -->
-    <div id="servicios" class="servicios">
-        <div class="bg-color-sky-light" data-auto-height="true">
-            <div class="container g-margin-t-15--xs g-padding-y-80--xs g-padding-y-125--sm">
-                <div class="row margin-b-40">
-                    <div class="col-sm-12">
-                        <h2>Servicios</h2>
-                    </div>
+    <!-- Services -->
+    <div id="services" class="services bg-color-sky-light container g-margin-t-15--xs g-padding-y-60--xs g-padding-y-115--sm" data-auto-height="true">
+        <div class="row">
+            <article class="services-card col-sm-4 col-12">
+                <div class="wow zoomIn animated" data-wow-duration=".3" data-wow-delay=".1s"
+                    style="visibility: visible; animation-delay: 0.1s; animation-name: zoomIn;">
+                    <img class="img-responsive" src="img/servicios/servicio1.png" alt="Image">
                 </div>
-                <div class="row">
-                    <div class="col-sm-4 margin-b-20">
-                        <article class="article g-box-shadow__dark-lightest">
-                            <div class="wow zoomIn animated" data-wow-duration=".3" data-wow-delay=".1s"
-                                style="visibility: visible; animation-delay: 0.1s; animation-name: zoomIn;">
-                                <img class="img-responsive" src="img/servicios/servicio1.png" alt="Image">
-                            </div>
-                            <div class="g-bg-color--white g-text-center--xs g-padding-x-40--xs g-padding-y-40--xs">
-                                <div class="text-center">
-                                    <h4>Grops Energy</a></h4>
-                                </div>
-                                <p>- Licitaciones de gas natural y energía eléctrica.</p>
-                                <p>- Análisis de potencias contratadas y cuadros tarifarios óptimos.</p>
-                                <p>- Soporte en el control mensual de facturaciones de energía eléctrica y gas.</p>
-                                <p>- Relevamientos energéticos en planta, con lineamientos de un Sistema de Gestión de
-                                    la Energía (SGE) bajo la norma ISO 50.001 para obtención de ahorros con inversiones
-                                    mínimas.</p>
-                                <p>- Abastecimiento de combustibles líquidos livianos y pesados, efectuando entrega en
-                                    planta del cliente, utilizando transportes propios o de terceros.</p>
-                                <p>- Desarrollo de proyectos y servicios para cada necesidad (gasoductos virtuales en
-                                    reemplazo de combustibles líquidos, inspección de tanques, ensayo de calidad de
-                                    aguas, etc.)</p>
-                            </div>
-                        </article>
-                    </div>
-                    <div class="col-sm-4 margin-b-20">
-                        <article class="article g-box-shadow__dark-lightest">
-                            <div class="wow zoomIn animated" data-wow-duration=".3" data-wow-delay=".1s"
-                                style="visibility: visible; animation-delay: 0.1s; animation-name: zoomIn;">
-                                <img class="img-responsive" src="img/servicios/servicio2.png" alt="Image">
-                            </div>
-                            <div class="g-bg-color--white g-text-center--xs g-padding-x-40--xs g-padding-y-40--xs">
-                                <div class="text-center">
-                                    <h4>Profesional - Industrial</a></h4>
-                                </div>
-                                <p>Incluye dos módulos independientes entre sí, pero que pueden integrarse.</p>
-                                <div class="text-center">
-                                    <p><b>Gestión energética - Profesional</b></p>
-                                </div>
-                                <p>- Tablero de control: estadísticas y gráficos de principales indicadores: consumo de
-                                    energía eléctrica, potencia, costos y tarifas , consumo y costos de gas u otro
-                                    insumo energético.</p>
-                                <p>- Control de facturación de energía (generador, comercializador, distribuidor).</p>
-                                <p>- Seguimiento de potencias eléctricas contratadas, reservas de gas y otras variables
-                                    energéticas.</p>
-                                <p>- Presupuestos de energía.</p>
-                                <div class="text-center">
-                                    <p><b>Integra Energía (Licitaciones)</b></p>
-                                </div>
-                                <p>Plataforma digital soporte para el proceso de licitación. Haciendo que sea mucho más
-                                    sencillo, transparente y seguro.</p>
-                                <p>- Acceso a empresas clientes para publicación de pedidos de compra, consultar estado
-                                    de los procesos, visualizar ofertas recibidas y adjudicar compras.</p>
-                                <p>- Acceso a empresas proveedoras para la visualización de pedidos de compra, realizar
-                                    consultas y ofertas.</p>
-                            </div>
-                        </article>
-                    </div>
-                    <div class="col-sm-4 margin-b-20">
-                        <article class="article g-box-shadow__dark-lightest">
-                            <div class="wow zoomIn animated" data-wow-duration=".3" data-wow-delay=".1s"
-                                style="visibility: visible; animation-delay: 0.1s; animation-name: zoomIn;">
-                                <img class="img-responsive" src="img/servicios/servicio3.png" alt="Image">
-                            </div>
-                            <div class="g-bg-color--white g-text-center--xs g-padding-x-40--xs g-padding-y-40--xs">
-                                <div class="text-center">
-                                    <h4>Plataforma Gestión Energética – Residencial</h4>
-                                </div>
-                                <p>- Tablero de control con gráficos de principales indicadores tales como: consumo y
-                                    costos asociados para energía eléctrica y/o gas.</p>
-                                <p>- Obtiene un análisis detallado del consumo de energía eléctrica y/o gas para
-                                    administrar su uso y disminuir el consumo, costos y huella de carbono.</p>
-                                <p>- Permite comparar lo facturado por la empresa proveedora (Gas, energía eléctrica)
-                                    con lo realmente consumido.</p>
-                                <p>- Prevee el consumo de energía antes de que lleguen las facturas.</p>
-                            </div>
-                        </article>
-                    </div>
+                <div class="g-bg-color--white g-text-center--xs g-padding-x-40--xs g-padding-y-40--xs">
+                    <h4 class="text-center">INGENIERÍA Y PROYECTOS</h4>
+                    <p>Soluciones en el campo de la energía, para que su empresa logre optimizar sus procesos y recursos energéticos.</p>
                 </div>
-            </div>
+                <img class="arrow" src="img/servicios/arrow.svg" alt="Leer Más">
+            </article>
+            <article class="services-card col-sm-4 col-12">
+                <div class="wow zoomIn animated" data-wow-duration=".3" data-wow-delay=".1s"
+                    style="visibility: visible; animation-delay: 0.1s; animation-name: zoomIn;">
+                    <img class="img-responsive" src="img/servicios/servicio2.png" alt="Image">
+                </div>
+                <div class="g-bg-color--white g-text-center--xs g-padding-x-40--xs g-padding-y-40--xs">
+                    <h4 class="text-center">Profesional - Industrial</a></h4>
+                    <p>Análisis y control del consumo energético, para garantizar una gestión eficiente y fomentar el ahorro.</br>
+                        Para ello contamos con la plataforma “GROPS SGE” una herramienta tecnológica que permite gestionar todos sus insumos energéticos: incluye análisis de consumos, costos y gráficas de principales variables.</p>
+                </div>
+                <img class="arrow" src="img/servicios/arrow.svg" alt="Leer Más">
+            </article>
+            <article class="services-card col-sm-4 col-12">
+                <div class="wow zoomIn animated" data-wow-duration=".3" data-wow-delay=".1s"
+                    style="visibility: visible; animation-delay: 0.1s; animation-name: zoomIn;">
+                    <img class="img-responsive" src="img/servicios/servicio3.png" alt="Image">
+                </div>
+                <div class="g-bg-color--white g-text-center--xs g-padding-x-40--xs g-padding-y-40--xs">
+                    <h4 class="text-center">CONTRATACIÓN DE INSUMOS ENERGÉTICOS</h4>
+                    <p>Información oportuna y de calidad, respecto a ofertas, brindamos asesoramiento para llevar a cabo de la mejor manera el proceso de adquisición de insumos energéticos.</br>
+                        Por medio de la plataforma “GROPS INTEGRA”, podrá obtener sus insumos energéticos de manera eficiente, segura y auditable</p>
+                </div>
+                <img class="arrow" src="img/servicios/arrow.svg" alt="Leer Más">
+            </article>
         </div>
     </div>
-    <!-- End Servicios-->
+    <!-- End Services-->
     <!-- FAQ1 -->
     <div id="faq" class="faq">
         <div class="content-lg container">
