--- a/index.html
+++ b/index.html
@@ -190,6 +190,49 @@
         </div>
     </div>
     <!-- End Services-->
+
+    <!-- Services - Proyects -->
+    <div id="company" class="content-lg company container">
+        <div class="row">
+            <div class="wow fadeInLeft animated text col-12 col-sm-6 sm-margin-b-50" data-wow-duration=".3" data-wow-delay=".1s"
+                style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInLeft;">
+                <h2 class="margin-b-30">INGENIERÍA Y PROYECTOS</h2>
+                <p class="margin-b-30">-Auditorías energéticas in situ, sobre los lineamientos del Sistema de Gestión Energética (SGE) bajo la norma ISO 50.001 para obtención de ahorros con inversiones mínimas.</p>
+                <p>-Desarrollo de ingeniería de proyectos y servicios para cada necesidad (sistemas de monitoreo energético, optimización de procesos de combustión, etc.)</p>
+            </div>
+            <div class="wow fadeInRight animated col-12 col-sm-6" data-wow-duration=".3" data-wow-delay=".1s"
+                style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInRight;">
+                <div class="company-img-container">
+                    <img class="img-responsive" src="img/servicios/IMAGEN_01.png" alt="multi-plataforma">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Services - Proyects -->
+
+    <!-- Services - gestion-energetica -->
+    <div id="company" class="content-lg company container ">
+        <div class="row margin-b-40">
+            <div class="col-sm-6 col-12" class="wow fadeInLeft animated text col-12 col-sm-6 sm-margin-b-50" data-wow-duration=".3" data-wow-delay=".1s"
+            style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInLeft;">
+                <h2 class="margin-b-30">GESTIÓN DE ENERGÍA</h2>
+                <p class="margin-b-30">Análisis de potencias contratadas y cuadros tarifarios óptimos. Soporte en el control mensual de facturación de los diferentes insumos energéticos.</p>
+                <h2 class="margin-b-30">ACCESO A PLATAFORMA GROPS SGE</h2>
+                <p class="margin-b-30">Tablero de control: permite visualizar de manera gráfica toda la información relacionada a los suministros energéticos de su empresa, tales como energía eléctrica, gas, combustibles, biomasa, entre otros.</p>
+                <p class="margin-b-30">Control de costos actuales de energía y estimación de presupuestos sobre variables específicas.</p>
+                <p class="margin-b-30">Análisis de matriz energética.</p>
+                <p class="margin-b-30">Control de potencias eléctricas contratadas y registradas y consumo de energía reactiva.</p>
+            </div>
+            <div class="col-sm-6 col-12" class="wow fadeInRight animated col-12 col-sm-6" data-wow-duration=".3" data-wow-delay=".1s"
+            style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInRight;">
+                <div class="company-img-container">
+                    <img class="img-responsive" src="img/servicios/IMAGEN_02.png" alt="multi-plataforma">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Services - Proyects -->
+    
     <!-- FAQ1 -->
     <div id="faq" class="faq">
         <div class="content-lg container">
@@ -604,7 +647,6 @@
     </div>
     <!-- End FAQ6 -->
     <!-- FAQ7 -->
-    <!-- ***********COMPLETE********** -->
     <!-- End FAQ7 -->
     <!-- FAQ8 -->
     <div id="FAQ8:Plataforma-Integra-Energia-Como-funciona">
