services - gestion energetica

--- a/index.html
+++ b/index.html
@@ -231,7 +231,29 @@
             </div>
         </div>
     </div>
-    <!-- End Services - Proyects -->
+    <!-- End Services - gestion-energetica -->
+
+    <!-- Services - insumos energeticos -->
+    <div id="company" class="content-lg company container ">
+            <div class="row margin-b-40">
+                <div class="col-sm-6 col-12" class="wow fadeInLeft animated text col-12 col-sm-6 sm-margin-b-50" data-wow-duration=".3" data-wow-delay=".1s"
+                style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInLeft;">
+                    <h2 class="margin-b-30">CONTRATACIÓN DE INSUMOS ENERGÉTICOS</h2>
+                    <p class="margin-b-30">-Licitaciones de gas natural, energía eléctrica y otros insumos energéticos.</p>
+                    <h2 class="margin-b-30">ACCESO A PLATAFORMA GROPS INTEGRA</h2>
+                    <p class="margin-b-30">Herramienta que permite vincular al cliente y proveedor de la manera más sencilla, transparente y segura.</p>
+                    <p class="margin-b-30">-Acceso a empresas clientes para publicación de pedidos de compra sujeto a coordinación con GROPS Integra, consultar estado de los procesos, visualizar ofertas recibidas y adjudicar compras.</p>
+                    <p class="margin-b-30">Acceso a empresas proveedoras para visualización de pedidos de compra, realizar consultas y ofertas</p>
+                </div>
+                <div class="col-sm-6 col-12" class="wow fadeInRight animated col-12 col-sm-6" data-wow-duration=".3" data-wow-delay=".1s"
+                style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInRight;">
+                    <div class="company-img-container">
+                        <img class="img-responsive" src="img/servicios/IMAGEN_03.png" alt="multi-plataforma">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End Services - insumos energeticos -->
     
     <!-- FAQ1 -->
     <div id="faq" class="faq">
