--- a/index.html
+++ b/index.html
@@ -735,23 +735,18 @@
     <!--========== FOOTER ==========-->
     <footer class="footer">
         <!-- Links -->
-        <div class="footer-seperator">
-            <div class="content-lg container">
-                <div class="row">
-                    <div class="col-sm-1 sm-margin-b-30">
+        <div class="footer-seperator content-lg container">
+            <div class="row">
+                <div class="col-sm-6 col-12 sm-margin-b-30">
+                    <h2 class="color-white margin-b-20">CONTACTO</h2>
+                    <input type="text" class="form-control footer-input margin-b-30" placeholder="Nombre" required>
+                    <input type="email" class="form-control footer-input margin-b-30" placeholder="Email" required>
+                    <input type="text" class="form-control footer-input margin-b-30" placeholder="Teléfono"
+                        required>
+                    <textarea class="form-control footer-input margin-b-30" rows="6" placeholder="Mensaje"
+                        required></textarea>
+                    <button type="submit" class="btn-theme btn-theme-sm btn-base-bg text-uppercase">Enviar</button>
                 </div>
-                    <div class="col-sm-10 sm-margin-b-30">
-                        <h2 class="color-white margin-b-20">Contacto</h2>
-                        <input type="text" class="form-control footer-input margin-b-30" placeholder="Nombre" required>
-                        <input type="email" class="form-control footer-input margin-b-30" placeholder="Email" required>
-                        <input type="text" class="form-control footer-input margin-b-30" placeholder="Teléfono"
-                            required>
-                        <textarea class="form-control footer-input margin-b-30" rows="6" placeholder="Mensaje"
-                            required></textarea>
-                        <button type="submit" class="btn-theme btn-theme-sm btn-base-bg text-uppercase">Enviar</button>
-                    </div>
-                </div>
-                <!--// end row -->
             </div>
         </div>
         <!-- End Links -->
