--- a/index.html
+++ b/index.html
@@ -157,35 +157,44 @@
                     style="visibility: visible; animation-delay: 0.1s; animation-name: zoomIn;">
                     <img class="img-responsive" src="img/servicios/servicio1.png" alt="Image">
                 </div>
-                <div class="g-bg-color--white g-text-center--xs g-padding-x-40--xs g-padding-y-40--xs">
+                <div class="g-bg-color--white g-padding-x-40--xs g-padding-y-40--xs">
                     <h4 class="text-center">INGENIERÍA Y PROYECTOS</h4>
                     <p>Soluciones en el campo de la energía, para que su empresa logre optimizar sus procesos y recursos energéticos.</p>
                 </div>
-                <img class="arrow" src="img/servicios/arrow.svg" alt="Leer Más">
+                <div class="services-arrow">
+                    <p class="text">Leer Más</p>
+                    <img class="img img-responsive" src="img/servicios/arrow_1.svg" alt="Leer Más">
+                </div>
             </article>
             <article class="services-card col-sm-4 col-12">
                 <div class="wow zoomIn animated" data-wow-duration=".3" data-wow-delay=".1s"
                     style="visibility: visible; animation-delay: 0.1s; animation-name: zoomIn;">
-                    <img class="img-responsive" src="img/servicios/servicio2.png" alt="Image">
+                    <img class="img-responsive integra" src="img/servicios/servicio2.png" alt="Image">
                 </div>
-                <div class="g-bg-color--white g-text-center--xs g-padding-x-40--xs g-padding-y-40--xs">
+                <div class="g-bg-color--white g-padding-x-40--xs g-padding-y-40--xs">
                     <h4 class="text-center">Profesional - Industrial</a></h4>
-                    <p>Análisis y control del consumo energético, para garantizar una gestión eficiente y fomentar el ahorro.</br>
+                    <p class="border-x">Análisis y control del consumo energético, para garantizar una gestión eficiente y fomentar el ahorro.</br>
                         Para ello contamos con la plataforma “GROPS SGE” una herramienta tecnológica que permite gestionar todos sus insumos energéticos: incluye análisis de consumos, costos y gráficas de principales variables.</p>
                 </div>
-                <img class="arrow" src="img/servicios/arrow.svg" alt="Leer Más">
+                <div class="services-arrow">
+                    <p class="text">Leer Más</p>
+                    <img class="img img-responsive" src="img/servicios/arrow_1.svg" alt="Leer Más">
+                </div>
             </article>
             <article class="services-card col-sm-4 col-12">
                 <div class="wow zoomIn animated" data-wow-duration=".3" data-wow-delay=".1s"
                     style="visibility: visible; animation-delay: 0.1s; animation-name: zoomIn;">
-                    <img class="img-responsive" src="img/servicios/servicio3.png" alt="Image">
+                    <img class="img-responsive sge" src="img/servicios/servicio3.png" alt="Image">
                 </div>
-                <div class="g-bg-color--white g-text-center--xs g-padding-x-40--xs g-padding-y-40--xs">
+                <div class="g-bg-color--white g-padding-x-40--xs g-padding-y-40--xs">
                     <h4 class="text-center">CONTRATACIÓN DE INSUMOS ENERGÉTICOS</h4>
                     <p>Información oportuna y de calidad, respecto a ofertas, brindamos asesoramiento para llevar a cabo de la mejor manera el proceso de adquisición de insumos energéticos.</br>
                         Por medio de la plataforma “GROPS INTEGRA”, podrá obtener sus insumos energéticos de manera eficiente, segura y auditable</p>
                 </div>
-                <img class="arrow" src="img/servicios/arrow.svg" alt="Leer Más">
+                <div class="services-arrow">
+                    <p class="text">Leer Más</p>
+                    <img class="img img-responsive" src="img/servicios/arrow_1.svg" alt="Leer Más">
+                </div>
             </article>
         </div>
     </div>
