--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <div class="wow fadeInRight animated col-12 col-sm-6" data-wow-duration=".3" data-wow-delay=".1s"
                 style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInRight;">
                 <div class="company-img-container">
-                    <img class="img-responsive" src="img/servicios/IMAGEN_01.png" alt="multi-plataforma">
+                    <img class="img img-responsive" src="img/servicios/IMAGEN_01.png" alt="multi-plataforma">
                 </div>
             </div>
         </div>
@@ -235,7 +235,7 @@
             <div class="col-sm-6 col-12" class="wow fadeInRight animated col-12 col-sm-6" data-wow-duration=".3" data-wow-delay=".1s"
             style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInRight;">
                 <div class="company-img-container">
-                    <img class="img-responsive" src="img/servicios/IMAGEN_02.png" alt="multi-plataforma">
+                    <img class="img img-responsive" src="img/servicios/IMAGEN_02.png" alt="multi-plataforma">
                 </div>
             </div>
         </div>
@@ -257,7 +257,7 @@
             <div class="col-sm-6 col-12" class="wow fadeInRight animated col-12 col-sm-6" data-wow-duration=".3" data-wow-delay=".1s"
             style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInRight;">
                 <div class="company-img-container">
-                    <img class="img-responsive" src="img/servicios/IMAGEN_03.png" alt="multi-plataforma">
+                    <img class="img img-responsive" src="img/servicios/IMAGEN_03.png" alt="multi-plataforma">
                 </div>
             </div>
         </div>
