--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <!-- Empresa -->
     <div class="content-lg" data-auto-height="true">
         <div id="company" class="company container">
-            <div class="row">
+            <div class="row cols-centered">
                 <div class="wow fadeInLeft animated col-12 col-sm-6 sm-margin-b-50" data-wow-duration=".3" data-wow-delay=".1s"
                     style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInLeft;">
                     <p class="margin-b-30">Somos una empresa especializada en el sector energético, enfocada en los procesos de abastecimiento, control de gestión e ingeniería y desarrollo de proyectos conformada por un equipo de profesionales con extensa trayectoria y experiencia en el rubro.</p>
@@ -155,44 +155,44 @@
     <div class="bg-color-sky-light content-lg" data-auto-height="true">
         <div id="services" class="services container">
             <div class="row">
-                <article class="services-card col-sm-4 col-12">
+                <article class="services-card col-sm-4 col-12 g-padding-x-20--xs">
                     <div class="wow zoomIn animated" data-wow-duration=".3" data-wow-delay=".1s"
                         style="visibility: visible; animation-delay: 0.1s; animation-name: zoomIn;">
                         <img class="img-responsive" src="img/servicios/servicio1.png" alt="Image">
                     </div>
-                    <div class="g-bg-color--white g-padding-x-40--xs g-padding-y-40--xs">
-                        <h4 class="text-center">INGENIERÍA Y PROYECTOS</h4>
-                        <p>Soluciones en el campo de la energía, para que su empresa logre optimizar sus procesos y recursos energéticos.</p>
+                    <div class="g-bg-color--white">
+                        <h5 class="text-center">INGENIERÍA Y PROYECTOS</h5>
+                        <p class="text-description">&nbsp;&nbsp;&nbsp;&nbsp;Soluciones en el campo de la energía, para que su empresa logre optimizar sus procesos y recursos energéticos.</p>
                     </div>
                     <div class="services-arrow">
                         <p class="text">Leer Más</p>
                         <img class="img img-responsive" src="img/servicios/arrow_1.svg" alt="Leer Más">
                     </div>
                 </article>
-                <article class="services-card col-sm-4 col-12">
+                <article class="services-card col-sm-4 col-12 g-padding-x-20--xs">
                     <div class="wow zoomIn animated" data-wow-duration=".3" data-wow-delay=".1s"
                         style="visibility: visible; animation-delay: 0.1s; animation-name: zoomIn;">
                         <img class="img-responsive integra" src="img/servicios/servicio2.png" alt="Image">
                     </div>
-                    <div class="g-bg-color--white g-padding-x-40--xs g-padding-y-40--xs">
-                        <h4 class="text-center">Profesional - Industrial</a></h4>
-                        <p class="border-x">Análisis y control del consumo energético, para garantizar una gestión eficiente y fomentar el ahorro.</br>
-                            Para ello contamos con la plataforma “GROPS SGE” una herramienta tecnológica que permite gestionar todos sus insumos energéticos: incluye análisis de consumos, costos y gráficas de principales variables.</p>
+                    <div class="g-bg-color--white">
+                        <h5 class="text-center">GESTIÓN DE ENERGÍA</a></h5>
+                        <p class="text-description">&nbsp;&nbsp;&nbsp;Análisis y control del consumo energético, para garantizar una gestión eficiente y fomentar el ahorro.</br>
+                            &nbsp;&nbsp;&nbsp;&nbsp;Para ello contamos con la plataforma “GROPS SGE” una herramienta tecnológica que permite gestionar todos sus insumos energéticos: incluye análisis de consumos, costos y gráficas de principales variables.</p>
                     </div>
                     <div class="services-arrow">
                         <p class="text">Leer Más</p>
                         <img class="img img-responsive" src="img/servicios/arrow_1.svg" alt="Leer Más">
                     </div>
                 </article>
-                <article class="services-card col-sm-4 col-12">
+                <article class="services-card col-sm-4 col-12 g-padding-x-20--xs">
                     <div class="wow zoomIn animated" data-wow-duration=".3" data-wow-delay=".1s"
                         style="visibility: visible; animation-delay: 0.1s; animation-name: zoomIn;">
                         <img class="img-responsive sge" src="img/servicios/servicio3.png" alt="Image">
                     </div>
-                    <div class="g-bg-color--white g-padding-x-40--xs g-padding-y-40--xs">
-                        <h4 class="text-center">CONTRATACIÓN DE INSUMOS ENERGÉTICOS</h4>
-                        <p>Información oportuna y de calidad, respecto a ofertas, brindamos asesoramiento para llevar a cabo de la mejor manera el proceso de adquisición de insumos energéticos.</br>
-                            Por medio de la plataforma “GROPS INTEGRA”, podrá obtener sus insumos energéticos de manera eficiente, segura y auditable</p>
+                    <div class="g-bg-color--white">
+                        <h5 class="text-center">CONTRATACIÓN DE INSUMOS ENERGÉTICOS</h5>
+                        <p class="text-description">&nbsp;&nbsp;&nbsp;Información oportuna y de calidad, respecto a ofertas, brindamos asesoramiento para llevar a cabo de la mejor manera el proceso de adquisición de insumos energéticos.</br>
+                            &nbsp;&nbsp;&nbsp;&nbsp;Por medio de la plataforma “GROPS INTEGRA”, podrá obtener sus insumos energéticos de manera eficiente, segura y auditable</p>
                     </div>
                     <div class="services-arrow">
                         <p class="text">Leer Más</p>
@@ -207,11 +207,11 @@
 
     <!-- Services - Proyects -->
     <div class="content-lg" data-auto-height="true">
-        <div id="company" class="company container">
-            <div class="row">
+        <div id="services-proyects" class="company container">
+            <div class="row cols-centered">
                 <div class="wow fadeInLeft animated text col-12 col-sm-6 sm-margin-b-50" data-wow-duration=".3" data-wow-delay=".1s"
                     style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInLeft;">
-                    <h2 class="margin-b-30">INGENIERÍA Y PROYECTOS</h2>
+                    <h3 class="margin-b-30">INGENIERÍA Y PROYECTOS</h3>
                     <p class="margin-b-30">-Auditorías energéticas in situ, sobre los lineamientos del Sistema de Gestión Energética (SGE) bajo la norma ISO 50.001 para obtención de ahorros con inversiones mínimas.</p>
                     <p>-Desarrollo de ingeniería de proyectos y servicios para cada necesidad (sistemas de monitoreo energético, optimización de procesos de combustión, etc.)</p>
                 </div>
@@ -228,13 +228,13 @@
 
     <!-- Services - gestion-energetica -->
     <div class="bg-color-sky-light content-lg" data-auto-height="true">
-        <div id="company" class="company container">
-            <div class="row margin-b-40">
+        <div id="services-ges" class="company container">
+            <div class="row cols-centered">
                 <div class="col-sm-6 col-12" class="wow fadeInLeft animated text col-12 col-sm-6 sm-margin-b-50" data-wow-duration=".3" data-wow-delay=".1s"
                 style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInLeft;">
-                    <h2 class="margin-b-30">GESTIÓN DE ENERGÍA</h2>
+                    <h3 class="margin-b-30">GESTIÓN DE ENERGÍA</h3>
                     <p class="margin-b-30">Análisis de potencias contratadas y cuadros tarifarios óptimos. Soporte en el control mensual de facturación de los diferentes insumos energéticos.</p>
-                    <h2 class="margin-b-30">ACCESO A PLATAFORMA GROPS SGE</h2>
+                    <h3 class="margin-b-30">ACCESO A PLATAFORMA GROPS SGE</h3>
                     <p class="margin-b-30">Tablero de control: permite visualizar de manera gráfica toda la información relacionada a los suministros energéticos de su empresa, tales como energía eléctrica, gas, combustibles, biomasa, entre otros.</p>
                     <p class="margin-b-30">Control de costos actuales de energía y estimación de presupuestos sobre variables específicas.</p>
                     <p class="margin-b-30">Análisis de matriz energética.</p>
@@ -253,13 +253,13 @@
 
     <!-- Services - insumos energeticos -->
     <div class="content-lg" data-auto-height="true">
-        <div id="company" class="company container ">
-            <div class="row margin-b-40">
+        <div id="services-insumos" class="company container ">
+            <div class="row cols-centered">
                 <div class="col-sm-6 col-12" class="wow fadeInLeft animated text col-12 col-sm-6 sm-margin-b-50" data-wow-duration=".3" data-wow-delay=".1s"
                 style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInLeft;">
-                    <h2 class="margin-b-30">CONTRATACIÓN DE INSUMOS ENERGÉTICOS</h2>
+                    <h3 class="margin-b-30">CONTRATACIÓN DE INSUMOS ENERGÉTICOS</h3>
                     <p class="margin-b-30">-Licitaciones de gas natural, energía eléctrica y otros insumos energéticos.</p>
-                    <h2 class="margin-b-30">ACCESO A PLATAFORMA GROPS INTEGRA</h2>
+                    <h3 class="margin-b-30">ACCESO A PLATAFORMA GROPS INTEGRA</h3>
                     <p class="margin-b-30">Herramienta que permite vincular al cliente y proveedor de la manera más sencilla, transparente y segura.</p>
                     <p class="margin-b-30">-Acceso a empresas clientes para publicación de pedidos de compra sujeto a coordinación con GROPS Integra, consultar estado de los procesos, visualizar ofertas recibidas y adjudicar compras.</p>
                     <p class="margin-b-30">Acceso a empresas proveedoras para visualización de pedidos de compra, realizar consultas y ofertas</p>
@@ -278,7 +278,7 @@
     <!-- FAQ - SGE -->
     <div class="bg-color-sky-light content-lg" data-auto-height="true">
         <div id="FAQ_SGE" class="FAQ container">
-            <div class="row margin-b-40">
+            <div class="row cols-centered">
                 <div class="col-sm-6 col-12" class="wow fadeInRight animated col-12 col-sm-6" data-wow-duration=".3" data-wow-delay=".1s"
                 style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInRight;">
                     <div class="FAQ-image-container">
@@ -312,7 +312,7 @@
     <!-- FAQ - INTEGRA -->
     <div class="content-lg" data-auto-height="true">
         <div id="FAQ_INTEGRA" class="FAQ container">
-            <div class="row margin-b-40">
+            <div class="row cols-centered">
                 <div class="col-sm-6 col-12" class="wow fadeInRight animated col-12 col-sm-6" data-wow-duration=".3" data-wow-delay=".1s"
                 style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInRight;">
                     <div class="FAQ-image-container">
@@ -349,12 +349,12 @@
     <!-- FAQ2 -->
     <div id="FAQ2:Plataforma-Gestion-Energetica-Beneficios" class="bg-color-sky-light content-lg benefits" data-auto-height="true">
         <div class="container">
-            <div class="row margin-b-40">
+            <div class="row margin-b-40 wow fadeInLeft animated">
                 <div class="col-sm-12">
                     <h2>Plataforma Gestión Energética - Beneficios</h2>
                 </div>
             </div>
-            <div class="row row-space-2 margin-b-20">
+            <div class="row row-space-2 margin-b-20 wow fadeInRight animated ">
                 <div class="col-sm-4 sm-margin-b-2">
                     <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".3s">
                         <div class="card " data-height="height">
@@ -371,7 +371,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4 sm-margin-b-2">
-                    <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".2s">
+                    <div class="wow fadeInLeft " data-wow-duration=".3" data-wow-delay=".2s">
                         <div class="card " data-height="height">
                             <div class="card-element text-center">
                                 <i class="card-icon icon-speedometer"></i>
@@ -728,8 +728,8 @@
     <!-- End FAQ8 -->
     <!-- FAQ9 -->
     <div id="FAQ9:Plataforma-Integra-Energia-que-se-necesita-para-acceder-a-la-plataforma" class="bg-color-sky-light content-lg">
-        <div class="container g-margin-t-15--xs g-padding-y-80--xs g-padding-y-125--sm">
-            <div class="row margin-b-40">
+        <div class="container">
+            <div class="row">
                 <div class="col-sm-12">
                     <h2>Plataforma Integra Energía - ¿Qué se necesita para acceder a la plataforma?</h2>
                 </div>
