--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ Desarrollo de ingeniería de proyectos y servicios customizables por el cliente 
                         <h4 class="text">¿Para qué se utiliza?</h4>
                     </div>
                     <div class="FAQ-card margin-b-30">
-                        
+                        <img class="img img-responsive margin-r-20" src="img/FAQ/1_menu/item_como funciona.png" alt="multi-plataforma">
                         <h4 class="text">¿Cómo funciona?</h4>
                     </div>
                     <div class="FAQ-card margin-b-30">
@@ -552,103 +552,108 @@ Desarrollo de ingeniería de proyectos y servicios customizables por el cliente 
     </div>
     <!-- End FAQ4 -->
     <!-- FAQ5 -->
-    <div id="FAQ5:requirenments-to-access-platform">
-        <div class="requirenments-to-access-platform content-lg container g-margin-t-15--xs g-padding-y-80--xs g-padding-y-125--sm">
+    <div id="requirementsSGE" class="requirementsSGE bg-color-sky-light">
+        <div class="content-lg container g-margin-t-15--xs g-padding-y-80--xs g-padding-y-125--sm">
             <div class="row margin-b-40">
                 <div class="col-sm-12">
-                    <h2>Plataforma Gestión Energética - ¿Qué se necesita para acceder a la plataforma?</h2>
+                    <h2>Plataforma Gestión Energética</h2>
+                    <h2>¿Qué se necesita para acceder a la plataforma?</h2>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm-4">
-                    <div class="wow zoomIn animated" data-wow-duration=".3" data-wow-delay=".1s"
-                        style="visibility: visible; animation-delay: 0.1s; animation-name: zoomIn;">
-                        <img class="img-responsive img-center"
-                            src="img/faq/5_Plataforma-Gestion-Energetica-Que-Se-Necesita-Para-Acceder-A-La-Plataforma/completar-datos-de-registro.png"
+            <div class="row margin-b-40 requirementsSGE-card">
+                <div class="col-sm-2 col-12  wow zoomIn animated" data-wow-duration=".3" data-wow-delay=".1s"
+                    style="visibility: visible; animation-delay: 0.1s; animation-name: zoomIn;">
+                    <!-- <img class="img-responsive img-center"
+                        src="img/faq/requirementsSGE/adjuntar facturas de suministro.png"
+                        alt="adjuntar facturas de suministro"> -->
+                    <div class="img-container">
+                        <img class="img-responsive img"
+                            src="img/faq/requirementsSGE/completar datos de registro.png"
                             alt="completar-datos-de-registro">
                     </div>
-                    <div class="g-bg-color--white g-text-center--xs g-padding-x-40--xs g-padding-y-40--xs">
-                        <div class="text-center">
-                            <h4>Completar datos de registro</h4>
-                        </div>
+                </div>
+                <div class="col-sm-5 col-12 text-left">
+                    <h4>Completar datos de registro</h4>
+                </div>
+            </div>
+            <div class="row margin-b-40 requirementsSGE-card">
+                <div class="col-sm-2 col-12  wow zoomIn animated" data-wow-duration=".3" data-wow-delay=".1s"
+                    style="visibility: visible; animation-delay: 0.1s; animation-name: zoomIn;">
+                    <!-- <img class="img-responsive img"
+                        src="img/faq/requirementsSGE/adjuntar facturas de suministro.png"
+                        alt="adjuntar facturas de suministro"> -->
+                    <div class="img-container">
+                        <img class="img-responsive img"
+                            src="img/faq/requirementsSGE/completar datos de registro.png"
+                            alt="completar-datos-de-registro">
                     </div>
                 </div>
-                <div class="col-sm-4">
-                    <div class="wow zoomIn animated" data-wow-duration=".3" data-wow-delay=".1s"
-                        style="visibility: visible; animation-delay: 0.1s; animation-name: zoomIn;">
-                        <img class="img-responsive img-center"
-                            src="img/faq/5_Plataforma-Gestion-Energetica-Que-Se-Necesita-Para-Acceder-A-La-Plataforma/enviar-adjuntar-facturas-los-suministros.png"
-                            alt="enviar-adjuntar-facturas">
-                    </div>
-                    <div class="g-bg-color--white g-text-center--xs g-padding-x-40--xs g-padding-y-40--xs">
-                        <div class="text-center">
-                            <h4>Enviar / adjuntar facturas de los suministros</h4>
-                        </div>
+                <div class="col-sm-5 col-12 text-left">
+                    <h4>Enviar / adjuntar facturas de los suministros</h4>
+                </div>
+            </div>
+            <div class="row margin-b-40 requirementsSGE-card g-margin-b-30--xs g-margin-b-0--md">
+                <div class="col-sm-2 col-12  wow zoomIn animated" data-wow-duration=".3" data-wow-delay=".1s"
+                    style="visibility: visible; animation-delay: 0.1s; animation-name: zoomIn;">
+                    <!-- <img class="img-responsive img"
+                        src="img/faq/requirementsSGE/solicitar medición.png"
+                        alt="solicitar medición"> -->
+                    <div class="img-container">
+                        <img class="img-responsive img"
+                            src="img/faq/requirementsSGE/completar datos de registro.png"
+                            alt="completar-datos-de-registro">
                     </div>
                 </div>
-                <div class="col-sm-4 g-margin-b-30--xs g-margin-b-0--md">
-                    <div class="wow zoomIn animated" data-wow-duration=".3" data-wow-delay=".1s"
-                        style="visibility: visible; animation-delay: 0.1s; animation-name: zoomIn;">
-                        <img class="img-responsive img-center"
-                            src="img/faq/5_Plataforma-Gestion-Energetica-Que-Se-Necesita-Para-Acceder-A-La-Plataforma/definir-requerimientos-tecnicos.png"
-                            alt="definir requerimientos tecnicos">
-                    </div>
-                    <div class="g-bg-color--white g-text-center--xs g-padding-x-40--xs g-padding-y-40--xs">
-                        <div class="text-center">
-                            <h4>En caso de solicitar medición on-line, definir
-                                requerimientos técnicos de medición de la localización (tipo de dispositivos,
-                                cantidad, esquema)</h4>
-                        </div>
-                    </div>
+                <div class="col-sm-5 col-12 text-left">
+                    <h4>En caso de solicitar medición on-line, definir
+                            cantidad, esquema)</h4>
                 </div>
             </div>
         </div>
     </div>
     <!-- FAQ5 -->
     <!-- FAQ6 -->
-    <div id="FAQ6:Plataforma-Integra-Energia-Beneficios" class="bg-color-sky-light content-lg">
-        <div class="container">
-            <div class="row margin-b-20">
-                <div class="col-sm-12">
-                    <h2>Plataforma Integra Energía - Beneficios</h2>
-                </div>
+    <div id="FAQ6:Plataforma-Integra-Energia-Beneficios" class="container content-lg">
+        <div class="row margin-b-20">
+            <div class="col-sm-12">
+                <h2>Plataforma Integra Energía - Beneficios</h2>
             </div>
-            <div class="row">
-                <div class="col-sm sm-margin-b-10 item-center">
-                    <div class="col-sm-2 col-sm-offset-1">
-                        <img class="img-responsive" src="img/faq/6_Plataforma-Integra-Energia-Beneficios/acceso.png"
-                            alt="acceso">
-                    </div>
-                    <h3>Acceso a todos los proveedores en forma directa y eficiente</h3>
+        </div>
+        <div class="row">
+            <div class="col-sm sm-margin-b-10 item-center">
+                <div class="col-sm-2 col-sm-offset-1">
+                    <img class="img-responsive" src="img/faq/6_Plataforma-Integra-Energia-Beneficios/acceso.png"
+                        alt="acceso">
                 </div>
+                <h3>Acceso a todos los proveedores en forma directa y eficiente</h3>
             </div>
-            <div class="row">
-                <div class="col-sm sm-margin-b-10 item-center">
-                    <div class="col-sm-2 col-sm-offset-1">
-                        <img class="img-responsive"
-                            src="img/faq/6_Plataforma-Integra-Energia-Beneficios/publicacion.png" alt="publicacion">
-                    </div>
-                    <h3>Publicación de pedidos y obtención de ofertas competitivas que mejorarán tus resultados.
-                    </h3>
+        </div>
+        <div class="row">
+            <div class="col-sm sm-margin-b-10 item-center">
+                <div class="col-sm-2 col-sm-offset-1">
+                    <img class="img-responsive"
+                        src="img/faq/6_Plataforma-Integra-Energia-Beneficios/publicacion.png" alt="publicacion">
                 </div>
+                <h3>Publicación de pedidos y obtención de ofertas competitivas que mejorarán tus resultados.
+                </h3>
             </div>
-            <div class="row">
-                <div class="col-sm sm-margin-b-10 item-center">
-                    <div class="col-sm-2 col-sm-offset-1">
-                        <img class="img-responsive"
-                            src="img/faq/6_Plataforma-Integra-Energia-Beneficios/participacion.png" alt="participacion">
-                    </div>
-                    <h3>Participación de manera segura con nuestro sistema de encriptación de datos.</h3>
+        </div>
+        <div class="row">
+            <div class="col-sm sm-margin-b-10 item-center">
+                <div class="col-sm-2 col-sm-offset-1">
+                    <img class="img-responsive"
+                        src="img/faq/6_Plataforma-Integra-Energia-Beneficios/participacion.png" alt="participacion">
                 </div>
+                <h3>Participación de manera segura con nuestro sistema de encriptación de datos.</h3>
             </div>
-            <div class="row">
-                <div class="col-sm sm-margin-b-10 item-center">
-                    <div class="col-sm-2 col-sm-offset-1">
-                        <img class="img-responsive" src="img/faq/6_Plataforma-Integra-Energia-Beneficios/obtencion.png"
-                            alt="obtencion">
-                    </div>
-                    <h3>Obtención de resultados trazables y auditables.</h3>
+        </div>
+        <div class="row">
+            <div class="col-sm sm-margin-b-10 item-center">
+                <div class="col-sm-2 col-sm-offset-1">
+                    <img class="img-responsive" src="img/faq/6_Plataforma-Integra-Energia-Beneficios/obtencion.png"
+                        alt="obtencion">
                 </div>
+                <h3>Obtención de resultados trazables y auditables.</h3>
             </div>
         </div>
     </div>
@@ -674,11 +679,11 @@ Desarrollo de ingeniería de proyectos y servicios customizables por el cliente 
     </div>
     <!-- End FAQ8 -->
     <!-- FAQ9 -->
-    <div id="FAQ9:Plataforma-Integra-Energia-que-se-necesita-para-acceder-a-la-plataforma" class="bg-color-sky-light content-lg">
-        <div class="container">
+    <div id="requirementsIntegra" class="requirementsIntegra bg-color-sky-light">
+        <div class="container content-lg">
             <div class="row">
                 <div class="col-sm-12">
-                    <h2>Plataforma Integra Energía - ¿Qué se necesita para acceder a la plataforma?</h2>
+                    <h2>Plataforma Integra Energía </br> ¿Qué se necesita para acceder a la plataforma?</h2>
                 </div>
             </div>
             <div class="row">
