--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@ Desarrollo de ingeniería de proyectos y servicios customizables por el cliente 
                 </div>
                 <div class="col-sm-5 col-12 text-left">
                     <h4>En caso de solicitar medición on-line, definir
-                            cantidad, esquema)</h4>
+                            cantidad, esquema</h4>
                 </div>
             </div>
         </div>
